# go_checks

./: .travis.yml  CMakeLists.txt  go c++.sln  go c++.vcxproj  go c++.vcxproj.filters
include/: Button.hpp  MainMenu.hpp  Table.hpp  TableStone.hpp  for_mainmenu.hpp  math_functions.hpp
libraries/: Button.cpp  Table.cpp  for_mainmenu.cpp  math_functions.cpp
server_for_go/: server_for_go.sln
server_for_go/server_for_go/: Source.cpp  playtable.cpp  playtable.hpp  server_for_go.vcxproj  server_for_go.vcxproj.filters  server_go.cpp  server_go.hpp
sources/: Button.cpp  MainMenu.cpp  Table.cpp  TableStone.cpp  for_mainmenu.cpp  source.cpp
